Changes to the html and css to use grid and flexbox and be more responsive

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>The Art of Ryan Van Dongen</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
@@ -21,67 +22,50 @@
 	</div>
 	<div class="navbar">
 		<ul>
-			<li><a class="focus" href="index.html">Home</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="merch.html">Merch</a></li>
-			<li><a href="contact.html">Contact</a></li>
+			<li class="flex-item nav"><a class="focus" href="index.html">Home</a></li>
+			<li class="flex-item nav"><a href="portfolio.html">Portfolio</a></li>
+			<li class="flex-item nav"><a href="merch.html">Merch</a></li>
+			<li class="flex-item nav"><a href="contact.html">Contact</a></li>
 		</ul>
 	</div>
-	<div class="hero">
-		<div class="heroimage">
-			<img src="images/hero.jpg" alt="Large Hero image showing part of A Quiet Winter artwork">
-			<div class="textright">A Quiet Winter - Artwork from 2016</div>
-		</div>
+	<div class="heroimage">
+			<a href="portfolio.html"><img src="images/batman-header.jpg" alt="Large Hero image showing part of Batman Returns artwork"></a>
+			<div class="textright">Batman Returns - Artwork from 2017</div>
 	</div>
 	<div class="section">
 		<div class="about">
-			<div class="wide">
 				<h3>About Me</h3>
 				<p>I am a concept artist and illustrator based in Philadelphia, PA, and currently attending Drexel 	University. </p>
 				<p>Check me out on <a href="https://www.instagram.com/ryanvandongen/" target="_blank">Instagram</a>, <a href="https://www.youtube.com/channel/UCLQk-Rgh7WLd8LrzA7SYqYg?view_as=subscriber" target="_blank">Youtube</a>, <a href="https://www.redbubble.com/people/ryanvandongen/portfolio">Redbubble</a>, <a href="https://www.artstation.com/ryan">Artstation</a>, <a href="https://www.facebook.com/ryan.vandongen1" target="_blank">Facebook</a>, and <a href="https://twitter.com/ryanjvandongen?lang=en" target="_blank">Twitter</a>.</p>
-			</div>
-			<div class="narrowimages">
+		</div>
+		<div class="about-image">
 				<img src="images/prof.jpeg" class="prof" alt="A photo of me">	
-			</div>
 		</div>
 	</div>
 	<div class="section2" >
 		<div class="recent">
-			<div class="narrow">
+			<div class="recent-main">
 				<h3>Portfolio</h3>
 				<h2>Recent Projects</h2>
 				<p>
-					<a href="https://www.youtube.com/watch?v=xR0_2yISfHs" target="_blank">See the making of the Angry Robot on Youtube</a>
+					Introducing the <a href="https://www.kickstarter.com/projects/artorder/tiny-dragons-art-project?ref=454099&token=09f48aaf" target="_blank"><b>Tiny Dragons</b> and <b>Not So Tiny Dragons</b> Artbooks</a> - A pair of upcoming dragon artbooks I'm part of along with Mike Corriero, Terryl Whitlatch, Stephanie Law, the late William O'Connor, and more. 
+				</p>
+				<p>
+					<a href="https://www.youtube.com/watch?v=zt8e_szKw44" target="_blank">See the making of "Batman Returns" on Youtube</a>
 				</p>
 				<a href="portfolio.html" class="button">View Portfolio</a>
 			</div>
-			<div class="wideimages">
-				<div class="rowright">
-
-					<!--Image Thumbnails-->
-					<ul>
-						<li>
-							<a href="#i1" class="thumbnail"><img src="images/1.jpg" width="150" alt="Evo"></a>
-						</li>
-						<li>
-							<a href="#i2" class="thumbnail"><img src="images/2.jpg" width="150" alt="Unicorn"></a>
-						</li>
-						<li>
-							<a href="#i3" class="thumbnail"><img src="images/3.jpg" width="150" alt="Giant"></a>
-						</li>
-					</ul>
-					<ul>
-						<li>
-							<a href="#i4" class="thumbnail"><img src="images/4.jpg" width="150" alt="Car"></a>
-						</li>
-						<li>
-							<a href="#i5" class="thumbnail"><img src="images/5.jpg" width="150" alt="Spaceship"></a>
-						</li>
-						<li>
-							<a href="#i6" class="thumbnail"><img src="images/6.jpg" width="150" alt="Chicken"></a>
-						</li>
-					</ul>
-				</div>
+			
+			<div class="gallery">
+				<!--Image Thumbnails-->
+				<a href="#i13" class="thumbnail"><img src="images/13.jpg" width="150" alt="Batman Returns"></a>
+				<a href="#i8" class="thumbnail"><img src="images/8.jpg" width="150" alt="Dragon Head"></a>
+				<a href="#i1" class="thumbnail"><img src="images/1.jpg" width="150" alt="Evo"></a>
+				<a href="#i2" class="thumbnail"><img src="images/2.jpg" width="150" alt="Unicorn"></a>
+				<a href="#i3" class="thumbnail"><img src="images/3.jpg" width="150" alt="Giant"></a>
+				<a href="#i4" class="thumbnail"><img src="images/4.jpg" width="150" alt="Car"></a>
+				<a href="#i5" class="thumbnail"><img src="images/5.jpg" width="150" alt="Spaceship"></a>
+				<a href="#i6" class="thumbnail"><img src="images/6.jpg" width="150" alt="Chicken"></a>
 			</div>
 		</div>
 	</div>
