--- a/merch.html
+++ b/merch.html
@@ -21,10 +21,10 @@
 	</div>
 	<div class="navbar">
 		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a class="focus" href="merch.html">Merch</a></li>
-			<li><a href="contact.html">Contact</a></li>
+			<li class="flex-item nav"><a href="index.html">Home</a></li>
+			<li class="flex-item nav"><a href="portfolio.html">Portfolio</a></li>
+			<li class="flex-item nav"><a class="focus" href="merch.html">Merch</a></li>
+			<li class="flex-item nav"><a href="contact.html">Contact</a></li>
 		</ul>
 	</div>
 	<div class="heroimage3">
@@ -39,13 +39,13 @@
 		</div>
 	</div>
 	<!--Section that displays clickable images of merchandise-->
-	<div class="section">
+	<div class="">
 		<div class="merch">
-			<ul>
-				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop/acrylic-blocks?accordion=product&cat_context=u-decor&ref=artist_shop_product_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/acrylic.jpg" alt="Acrylic Blocks" width="400"><br />Shop Acrylic Blocks</a></li>
-				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop/prints?accordion=department&ref=artist_shop_department_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/artboard.jpg" alt="Small Art Print" width="400"><br />Shop Art Prints</a></li>
-				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop/home-decor?accordion=department&ref=artist_shop_department_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/pillow2.jpg" alt="Throw Pillow" width="400"><br />Shop Home Decor</a></li>
-				<li><a href="https://www.redbubble.com/people/ryanvandongen/shop?ref=artist_shop_category_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/t-shirt.jpg" alt="T-Shirt" width="400"><br />Shop Apparel and More</a></li>
+			<ul class="flexbox">
+				<li class="flex-item"><a href="https://www.redbubble.com/people/ryanvandongen/shop/acrylic-blocks?accordion=product&cat_context=u-decor&ref=artist_shop_product_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/acrylic.jpg" alt="Acrylic Blocks" width="400"><br />Shop Acrylic Blocks</a></li>
+				<li class="flex-item"><a href="https://www.redbubble.com/people/ryanvandongen/shop/prints?accordion=department&ref=artist_shop_department_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/artboard.jpg" alt="Small Art Print" width="400"><br />Shop Art Prints</a></li>
+				<li class="flex-item"><a href="https://www.redbubble.com/people/ryanvandongen/shop/home-decor?accordion=department&ref=artist_shop_department_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/pillow2.jpg" alt="Throw Pillow" width="400"><br />Shop Home Decor</a></li>
+				<li class="flex-item"><a href="https://www.redbubble.com/people/ryanvandongen/shop?ref=artist_shop_category_refinement&asc=u" class="thumbnail" target="_blank"><img src="images/t-shirt.jpg" alt="T-Shirt" width="400"><br />Shop Apparel and More</a></li>
 			</ul>
 			<div class="caption"></div>
 		</div>
