--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,10 @@
 	</div>
 	<div class="navbar">
 		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="merch.html">Merch</a></li>
-			<li><a class="focus" href="contact.html">Contact</a></li>
+			<li class="flex-item nav"><a href="index.html">Home</a></li>
+			<li class="flex-item nav"><a href="portfolio.html">Portfolio</a></li>
+			<li class="flex-item nav"><a href="merch.html">Merch</a></li>
+			<li class="flex-item nav"><a class="focus" href="contact.html">Contact</a></li>
 		</ul>
 	</div>
 	<div class="heroimage3">
