--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,10 @@
 	<!--Navbar-->
 	<div class="navbar">
 		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a class="focus" href="portfolio.html">Portfolio</a></li>
-			<li><a href="merch.html">Merch</a></li>
-			<li><a href="contact.html">Contact</a></li>
+			<li class="flex-item nav"><a href="index.html">Home</a></li>
+			<li class="flex-item nav"><a class="focus" href="portfolio.html">Portfolio</a></li>
+			<li class="flex-item nav"><a href="merch.html">Merch</a></li>
+			<li class="flex-item nav"><a href="contact.html">Contact</a></li>
 		</ul>
 	</div>
 	<!--Hero Image-->
@@ -36,30 +36,23 @@
 		<div class="textoverlay">Portfolio</div>
 
 	</div>
-	<div class="section">
+	<div class="">
 		<!--Image Thumbnails-->
-		<div class="row">
-			<ul>
-				<li><a href="#i1" class="thumbnail"><img src="images/1.jpg" alt="Evo"></a></li>
-				<li><a href="#i2" class="thumbnail"><img src="images/2.jpg" alt="Unicorn"></a></li>
-				<li><a href="#i3" class="thumbnail"><img src="images/3.jpg" alt="Passing Giant"></a></li>
+			<ul class="flexbox">
+				<li class="flex-item"><a href="#i13" class="thumbnail"><img src="images/13.jpg" alt="Batman Returns"></a></li>
+				<li class="flex-item"><a href="#i1" class="thumbnail"><img src="images/1.jpg" alt="Evo"></a></li>
+				<li class="flex-item"><a href="#i2" class="thumbnail"><img src="images/2.jpg" alt="Unicorn"></a></li>
+				<li class="flex-item"><a href="#i3" class="thumbnail"><img src="images/3.jpg" alt="Passing Giant"></a></li>
+				<li class="flex-item"><a href="#i4" class="thumbnail"><img src="images/4.jpg" alt="Car"></a></li>
+				<li class="flex-item"><a href="#i5" class="thumbnail"><img src="images/5.jpg" alt="Spaceship"></a></li>
+				<li class="flex-item"><a href="#i6" class="thumbnail"><img src="images/6.jpg" alt="Chicken"></a></li>
+				<li class="flex-item"><a href="#i7" class="thumbnail"><img src="images/7.jpg" alt="Dragon"></a></li>
+				<li class="flex-item"><a href="#i8" class="thumbnail"><img src="images/8.jpg" alt="Dragon Head"></a></li>
+				<li class="flex-item"><a href="#i9" class="thumbnail"><img src="images/9.jpg" alt="Giant Robot"></a></li>
+				<li class="flex-item"><a href="#i10" class="thumbnail"><img src="images/10.jpg" alt="Uncharted Waters"></a></li>
+				<li class="flex-item"><a href="#i11" class="thumbnail"><img src="images/11.jpg" alt="Rubeum Knight"></a></li>
+				<li class="flex-item"><a href="#i12" class="thumbnail"><img src="images/12.jpg" alt="Sea Dragon"></a></li>
 			</ul>
-			<ul>
-				<li><a href="#i4" class="thumbnail"><img src="images/4.jpg" alt="Car"></a></li>
-				<li><a href="#i5" class="thumbnail"><img src="images/5.jpg" alt="Spaceship"></a></li>
-				<li><a href="#i6" class="thumbnail"><img src="images/6.jpg" alt="Chicken"></a></li>
-			</ul>
-			<ul>
-				<li><a href="#i7" class="thumbnail"><img src="images/7.jpg" alt="Dragon"></a></li>
-				<li><a href="#i8" class="thumbnail"><img src="images/8.jpg" alt="Dragon Head"></a></li>
-				<li><a href="#i9" class="thumbnail"><img src="images/9.jpg" alt="Giant Robot"></a></li>
-			</ul>
-			<ul>
-				<li><a href="#i10" class="thumbnail"><img src="images/10.jpg" alt="Uncharted Waters"></a></li>
-				<li><a href="#i11" class="thumbnail"><img src="images/11.jpg" alt="Rubeum Knight"></a></li>
-				<li><a href="#i12" class="thumbnail"><img src="images/12.jpg" alt="Sea Dragon"></a></li>
-			</ul>
-		</div>
 	</div>
 
 	<!--Hidden full-size images that act as lightboxes-->
@@ -105,23 +98,42 @@
 			<h3>Resume</h3>
 			<div class="resume">
 				<ul>
-					<li class="job"><h4>Nexus Shift Studios</h4></li>
-					<li class="desc">Concept Artist and Illustrator - 2016 to Present</li>
-				</ul>
-				<ul>
-					<li class="job"><h4>Connectify, Inc.</h4></li>
+					<li class="job"><a href="http://connectify.me/" target="_blank"><h4>Connectify, Inc.</h4></a></li>
 					<li class="desc">Multimedia Developer - 2016 - 2017, <br />2017 to Present</li>
 				</ul>
 				<ul>
-					<li class="job"><h4>Cogwright Games</h4></li>
+					<li class="job"><a href="http://speedify.com/" target="_blank"><h4>Speedify</h4></a></li>
+					<li class="desc">Multimedia Developer - 2016 - 2017, <br />2017 to Present</li>
+				</ul>
+				<ul>
+					<li class="job"><a href="https://www.kickstarter.com/projects/cogwrightgames/underleague-strategy-card-game-of-fantasy-pit-figh" target="_blank"><h4>Cogwright Games</h4></a></li>
+					<li class="desc">Card Illustrator - 2017 to Present</li>
+				</ul>
+				<ul>
+					<li class="job"><a href="http://www.kicktraq.com/projects/1083731892/archive-digital-tabletop-roleplaying-game/" target="_blank"><h4>Nexus Shift Studios</h4></a></li>
+					<li class="desc">Concept Artist and Illustrator - 2016 to Present</li>
+				</ul>
+				<ul>
+					<li class="job"><a href="https://soundcloud.com/laurendeclasse" target="_blank"><h4>Lauren Declasse</h4></a></li>
+					<li class="desc">Illustrator - 2 Upcoming Releases - 2017 to Present</li>
+				</ul>
+				<ul>
+					<li class="job"><a href=http://www.iron-soul.net/"" target="_blank"><h4>Ironsoul Legion</h4></a></li>
 					<li class="desc">Illustrator - 2017 to Present</li>
 				</ul>
 				<ul>
-					<li class="job"><h4>Ironsoul Legion</h4></li>
-					<li class="desc">Illustrator - 2017 to Present</li>
+					<li class="job"><a href="https://www.kickstarter.com/projects/artorder/tiny-dragons-art-project?ref=454099&token=09f48aaf" target="_blank"><h4>Not So Tiny Dragons Artbook</h4></a></li>
+					<li class="desc">Illustrator - 2018 to Present</li>
 				</ul>
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript">
+		function expandImage (imageId) {
+			var image = document.getElementById(imageId);
+
+			image.classlist.add("big-image");
+		}
+	</script>
 </body>
 </html>
