Added media queries to make pages more responsive, changed some colors, removed errors, and added artwork

--- a/contact.html
+++ b/contact.html
@@ -36,19 +36,13 @@
 	
 	<div class="section2">
 		<div class="contact">
-			<h3>Contact Me</h3>
-			<h2>Get in Touch!</h2>
-			<form class="form">
-				<label for="email">Email Address *</label>
-				<input type="text" name="Email Address" id="email">
-				<br>
-				<label for="message">Message *</label>
-				<textarea id="message"></textarea>
-				<br>
-				<input type="submit" name="submit" class="button">
-			</form>
-			<br />
-			Or find me on <a href="https://www.instagram.com/ryanvandongen/" target="_blank">Instagram</a>, <a href="https://www.youtube.com/channel/UCLQk-Rgh7WLd8LrzA7SYqYg?view_as=subscriber" target="_blank">Youtube</a>, <a href="https://www.redbubble.com/people/ryanvandongen/portfolio" target="_blank">Redbubble</a>, <a href="https://www.artstation.com/ryan" target="_blank">Artstation</a>, <a href="https://www.facebook.com/ryan.vandongen1" target="_blank">Facebook</a>, and <a href="https://twitter.com/ryanjvandongen?lang=en" target="_blank">Twitter</a>.
+			<div class="center-container">
+				<h3>Contact Me</h3>
+				<h2>Get in Touch!</h2>
+				<p>You can reach me at ryanvdon@gmail.com or find me on <a href="https://www.instagram.com/ryanvandongen/" target="_blank">Instagram</a>, <a href="https://www.youtube.com/channel/UCLQk-Rgh7WLd8LrzA7SYqYg?view_as=subscriber" target="_blank">Youtube</a>, <a href="https://www.redbubble.com/people/ryanvandongen/portfolio" target="_blank">Redbubble</a>, <a href="https://www.artstation.com/ryan" target="_blank">Artstation</a>, <a href="https://www.facebook.com/ryan.vandongen1" target="_blank">Facebook</a>, and <a href="https://twitter.com/ryanjvandongen?lang=en" target="_blank">Twitter</a>.</p>
+				<a href="mailto:ryanvdon@gmail.com" class="button" target="_blank">Send Me an Email</a>
+				<br />
+			</div>
 		</div>
 	</div>
 	<footer>
