--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 				<p>Check me out on <a href="https://www.instagram.com/ryanvandongen/" target="_blank">Instagram</a>, <a href="https://www.youtube.com/channel/UCLQk-Rgh7WLd8LrzA7SYqYg?view_as=subscriber" target="_blank">Youtube</a>, <a href="https://www.redbubble.com/people/ryanvandongen/portfolio">Redbubble</a>, <a href="https://www.artstation.com/ryan">Artstation</a>, <a href="https://www.facebook.com/ryan.vandongen1" target="_blank">Facebook</a>, and <a href="https://twitter.com/ryanjvandongen?lang=en" target="_blank">Twitter</a>.</p>
 		</div>
 		<div class="about-image">
-				<img src="images/prof.jpeg" class="prof" alt="A photo of me">	
+			<picture>
+				<source media="(min-width: 650px)" srcset="images/prof.jpeg">
+				<img src="images/prof-small.jpg" class="prof" alt="A photo of me">	
+			</picture>
 		</div>
 	</div>
 	<div class="section2" >
@@ -59,17 +62,20 @@
 			<div class="gallery">
 				<!--Image Thumbnails-->
 				<a href="#i13" class="thumbnail"><img src="images/13.jpg" width="150" alt="Batman Returns"></a>
-				<a href="#i8" class="thumbnail"><img src="images/8.jpg" width="150" alt="Dragon Head"></a>
+				<a href="#i14" class="thumbnail"><img src="images/14.jpg" width="150" alt="Beaker"></a>
+				<a href="#i16" class="thumbnail"><img src="images/16.jpg" width="150" alt="Legionnaire"></a>
+				<a href="#i15" class="thumbnail"><img src="images/15.jpg" width="150" alt="Chained Leg"></a>
 				<a href="#i1" class="thumbnail"><img src="images/1.jpg" width="150" alt="Evo"></a>
 				<a href="#i2" class="thumbnail"><img src="images/2.jpg" width="150" alt="Unicorn"></a>
-				<a href="#i3" class="thumbnail"><img src="images/3.jpg" width="150" alt="Giant"></a>
-				<a href="#i4" class="thumbnail"><img src="images/4.jpg" width="150" alt="Car"></a>
-				<a href="#i5" class="thumbnail"><img src="images/5.jpg" width="150" alt="Spaceship"></a>
-				<a href="#i6" class="thumbnail"><img src="images/6.jpg" width="150" alt="Chicken"></a>
+				<a href="#i3" class="thumbnail"><img src="images/3.jpg" width="150" alt="Passing Giant"></a>
+				
 			</div>
 		</div>
 	</div>
 	<!--Hidden Images to appear as Lightboxes-->
+	<a href="#_" class="lightbox" id="i13">
+  		<img src="images/i13.jpg" alt="Batman">
+	</a>
 	<a href="#_" class="lightbox" id="i1">
   		<img src="images/i1.jpg" alt="Evo">
 	</a>
