--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,9 @@
 		<!--Image Thumbnails-->
 			<ul class="flexbox">
 				<li class="flex-item"><a href="#i13" class="thumbnail"><img src="images/13.jpg" alt="Batman Returns"></a></li>
+				<li class="flex-item"><a href="#i14" class="thumbnail"><img src="images/14.jpg" alt="Beaker"></a></li>
+				<li class="flex-item"><a href="#i16" class="thumbnail"><img src="images/16.jpg" alt="Legionnaire"></a></li>
+				<li class="flex-item"><a href="#i15" class="thumbnail"><img src="images/15.jpg" alt="Chained Leg"></a></li>
 				<li class="flex-item"><a href="#i1" class="thumbnail"><img src="images/1.jpg" alt="Evo"></a></li>
 				<li class="flex-item"><a href="#i2" class="thumbnail"><img src="images/2.jpg" alt="Unicorn"></a></li>
 				<li class="flex-item"><a href="#i3" class="thumbnail"><img src="images/3.jpg" alt="Passing Giant"></a></li>
@@ -56,6 +59,7 @@
 	</div>
 
 	<!--Hidden full-size images that act as lightboxes-->
+	
 	<a href="#_" class="lightbox" id="i1">
   		<img src="images/i1.jpg" alt="Evo">
 	</a>
@@ -92,6 +96,19 @@
 	<a href="#_" class="lightbox" id="i12">
   		<img src="images/i12.jpg" alt="Sea Dragon">
 	</a>
+	<a href="#_" class="lightbox" id="i13">
+  		<img src="images/i13.jpg" alt="Batman">
+  	</a>
+  	<a href="#_" class="lightbox" id="i14">
+  		<img src="images/i14.jpg" alt="Beaker">
+  	</a>
+  	<a href="#_" class="lightbox" id="i15">
+  		<img src="images/i15.jpg" alt="Chained Leg">
+  	</a>
+  	<a href="#_" class="lightbox" id="i16">
+  		<img src="images/i16.jpg" alt="Legionnaire">
+  	</a>
+
 	<!--Resume Section-->
 	<div class="section2">
 		<div class="row">
@@ -123,17 +140,10 @@
 				</ul>
 				<ul>
 					<li class="job"><a href="https://www.kickstarter.com/projects/artorder/tiny-dragons-art-project?ref=454099&token=09f48aaf" target="_blank"><h4>Not So Tiny Dragons Artbook</h4></a></li>
-					<li class="desc">Illustrator - 2018 to Present</li>
+					<li class="desc">Illustrator - 2018</li>
 				</ul>
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript">
-		function expandImage (imageId) {
-			var image = document.getElementById(imageId);
-
-			image.classlist.add("big-image");
-		}
-	</script>
 </body>
 </html>
