,Small changes to help with load times and mobile hero image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 		</ul>
 	</div>
 	<div class="heroimage">
-			<a href="portfolio.html"><img src="images/batman-header.jpg" alt="Large Hero image showing part of Batman Returns artwork"></a>
+			<a href="portfolio.html">
+				<picture>
+					<source media="(min-width: 650px)" srcset="images/batman-header.jpg">
+					<img src="images/batman-header-small.jpg" alt="Large Hero image showing part of Batman Returns artwork">	
+				</picture>
+			</a>
 			<div class="textright">Batman Returns - Artwork from 2017</div>
 	</div>
 	<div class="section">
