Changes for mobile text scaling and image thumbnails on homepage

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>The Art of Ryan Van Dongen</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
@@ -39,6 +40,7 @@
 			<div class="center-container">
 				<h3>Contact Me</h3>
 				<h2>Get in Touch!</h2>
+				<!-- Conatact section with mailto link-->
 				<p>You can reach me at ryanvdon@gmail.com or find me on <a href="https://www.instagram.com/ryanvandongen/" target="_blank">Instagram</a>, <a href="https://www.youtube.com/channel/UCLQk-Rgh7WLd8LrzA7SYqYg?view_as=subscriber" target="_blank">Youtube</a>, <a href="https://www.redbubble.com/people/ryanvandongen/portfolio" target="_blank">Redbubble</a>, <a href="https://www.artstation.com/ryan" target="_blank">Artstation</a>, <a href="https://www.facebook.com/ryan.vandongen1" target="_blank">Facebook</a>, and <a href="https://twitter.com/ryanjvandongen?lang=en" target="_blank">Twitter</a>.</p>
 				<a href="mailto:ryanvdon@gmail.com" class="button" target="_blank">Send Me an Email</a>
 				<br />
