--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
 		</div>
 	</div>
 	<!--Hidden Images to appear as Lightboxes-->
-	<a href="#_" class="lightbox" id="i13">
-  		<img src="images/i13.jpg" alt="Batman">
-	</a>
+	
 	<a href="#_" class="lightbox" id="i1">
   		<img src="images/i1.jpg" alt="Evo">
 	</a>
@@ -90,14 +88,17 @@
 	<a href="#_" class="lightbox" id="i3">
   		<img src="images/i3.png" alt="Giant">
 	</a>
-	<a href="#_" class="lightbox" id="i4">
-  		<img src="images/i4.jpg" alt="Car">
-	</a>
-	<a href="#_" class="lightbox" id="i5">
-  		<img src="images/i5.jpg" alt="Spaceship">
-	</a>
-	<a href="#_" class="lightbox" id="i6">
-  		<img src="images/i6.png" alt="Chicken">
+	<a href="#_" class="lightbox" id="i13">
+  		<img src="images/i13.jpg" alt="Batman">
+  	</a>
+  	<a href="#_" class="lightbox" id="i14">
+  		<img src="images/i14.jpg" alt="Beaker">
+  	</a>
+  	<a href="#_" class="lightbox" id="i15">
+  		<img src="images/i15.jpg" alt="Chained Leg">
+  	</a>
+  	<a href="#_" class="lightbox" id="i16">
+  		<img src="images/i16.jpg" alt="Legionnaire">
 	</a>
 
 	<!--Contact Section, with a mailto button pointed at my email address-->
